index.css
body {
	font-family: 'Montserrat', sans-serif;
	line-height: 1.6;
	margin: 0;
}
ul {
  margin: 0;
  padding: 0;
  list-style: none;
}


h2,
h3,
a {
	color: #34495e;
}

a {
	text-decoration: none;
}



.logo {
	margin: 0;
	font-size: 1.45em;
}

.main-nav {
	margin-top: 5px;
}

.logo a,
.main-nav a {
	padding: 10px 15px;
	text-transform: uppercase;
	text-align: center;
	display: block;
}

.main-nav a {
	color: #34495e;
	font-size: .99em;
}

.main-nav a:hover {
	color: #718daa;
}



.header {
	padding-top: .5em;
	padding-bottom: .5em;
	border: 1px solid #a2a2a2;
	background-color: #f4f4f4;
	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
}


/* =================================
  Media Queries
==================================== */




@media (min-width: 769px) {
	.header,
	.main-nav {
		display: flex;
	}
	.header {
		flex-direction: column;
		align-items: center;
    	.header{
		width: 80%;
		margin: 0 auto;
		max-width: 1150px;
	}
	}

}

@media (min-width: 1025px) {
	.header {
		flex-direction: row;
		justify-content: space-between;
	}

}

.hero {
  width: 100%
}

.landingphoto {
  width: 100%;
  height: 900px;
}


.desc {
  position: absolute;
  top: 100px;
  left: 0px;
  margin-left: 20px;
}

.desc-item {
  font-size: 30px;
  font-family: 'Lucida Sans Typewriter';
  position: relative;
  color: white;
  z-index: 2;
}

.photogrid{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
  gap: 1rem;
}

.photo {
  z-index: 1;
  opacity: 0.8;
  width: 100%;
  height: 75%;
  transform: scale(1);
  transition: opacity 800ms, transform 600ms;
  &:hover {
    transform: scale(1.05);
    opacity: 1;
    transition: transform 600ms, opacity 2000ms;
  }
}

